--- a/phaser_tutorial.html
+++ b/phaser_tutorial.html
@@ -15,7 +15,7 @@
 
 <script type="text/javascript">
 
-	var config = {
+/*	var config = {
 		type: Phaser.AUTO, //set to AUTO to allow for attempted use of WebGL if browser allows
 		width: 800, //canvas sizes
 		height: 600, //cs
@@ -23,10 +23,22 @@
 		physics: { //tell Phaser to use physics
 			default: 'arcade',
 			arcade: {
-				gravity: {y: 300},
+				gravity: {y: 300}, //global gravity
 				debug: false
 			}
-		},
+		},*/
+
+var config = {
+	type: Phaser.AUTO,
+	width: 800,
+	height: 600,
+	physics: {
+		default: 'arcade',
+		arcade: {
+			gravity: { y: 300 },
+			debug: false
+		}
+	},
 
 		scene: {
 			preload: preload,
@@ -35,6 +47,9 @@
 		}
 	};
 
+	var player;
+	var platforms;
+	
 	var game = new Phaser.Game(config); //instance assigned to local variable 'game'
 
 	function preload() //load assets for the game
@@ -48,46 +63,46 @@
 			{frameWidth:32, frameHeight:48});
 	}
 
-	function create() { //order in which images are created is the order in which they are drawn on screen.  Background image should always go first
+	function create() 
+	{ //order in which images are created is the order in which they are drawn on screen.  Background image should always go first
+		
 		this.add.image(400, 300, 'sky'); //in phaser 3 all game objects are positioned based on their centre by default
 		//this.add.image(400, 300, 'star'); //star at screen centre
 
 		platforms = this.physics.add.staticGroup(); //creates a static grouping so that they wont move based on arcade physics
 
 		platforms.create(400, 568, 'ground').setScale(2).refreshBody(); //floor scaled to x2. Must be refreshed to inform physics of the change in size
-
 		platforms.create(600, 400, 'ground');
 		platforms.create(50, 250, 'ground');
 		platforms.create(750, 220, 'ground');
 
 
-
 		player = this.physics.add.sprite(100, 450, 'dude'); //create sprite called player as a dynamic body
 
 		player.setBounce(0.2); //slight landing bounce value
-		player.setColliderWorldBounds(true); //collide with the world bounds (800x600)
-
-
-		//create multiple use animations which can be applied to as many game objects as wanted (phaser 3 improvement)
+		player.setCollideWorldBounds(true); //collide with the world bounds (800x600)
+		
+		//create animations which can be applied to as many game objects as wanted (phaser 3 improvement)
 		this.anims.create({ //animation for left movement
 			key: 'left',
 			frames: this.anims.generateFrameNumbers('dude',{ start:0, end:3}), //sets sprites from sheet
 			frameRate: 10, //speed of movement
 			repeat: -1 //loop animation
 		});
-
+		this.anims.create({ //turn animation
+			key: 'turn',
+			frames: [{key: 'dude', frame: 4}],
+			frameRate:20
+		});
 		this.anims.create({ //animation for right movement
 			key: 'right',
 			frames: this.anims.generateFrameNumbers('dude',{ start:5, end:8}),
 			frameRate: 10,
 			repeat: -1
 		});
-
-		this.anims.create({
-			key: 'turn',
-			frames: [{key: 'dude', frame: 4}],
-			frameRate:20
-		});
+		
+		this.physics.add.collider(player, platforms); //sets the collision between player and platform
+		
 	}
 
 	function update() {
@@ -96,7 +111,6 @@
 
 	
 </script>
-
 
 </body>
 </html>
