--- a/phaser_tutorial.html
+++ b/phaser_tutorial.html
@@ -38,10 +38,17 @@
 	var player;
 	var platforms;
 	var stars;
+	var bombs;
+	var score = 0;
+	var scoreText;
+	var gameOver = false;
+	
+	//input
 	var cursors;
 
-	var jumpValue = -330;
 
+
+	var jumpValue = -330;
 	
 	var game = new Phaser.Game(config); //instance assigned to local variable 'game'
 
@@ -60,7 +67,6 @@
 	{ //order in which images are created is the order in which they are drawn on screen.  Background image should always go first
 		
 		this.add.image(400, 300, 'sky'); //in phaser 3 all game objects are positioned based on their centre by default
-		//this.add.image(400, 300, 'star'); //star at screen centre
 
 		platforms = this.physics.add.staticGroup(); //creates a static grouping so that they wont move based on arcade physics
 
@@ -81,11 +87,15 @@
 			child.setBounceY(Phaser.Math.FloatBetween(0.4, 0.8));
 		});
 
+		bombs = this.physics.add.group();
 
 		player = this.physics.add.sprite(100, 450, 'dude'); //create sprite called player as a dynamic body
 
 		player.setBounce(0.2); //slight landing bounce value
 		player.setCollideWorldBounds(true); //collide with the world bounds (800x600)
+
+		//create scoreText (16x16 is coord to display text).  Can specify a text font here as well if wanted
+		scoreText = this.add.text(16, 16, 'score: 0', { fontSize: '32px', fill: '#000' });
 		
 		//create animations which can be applied to as many game objects as wanted (phaser 3 improvement)
 		this.anims.create({ //animation for left movement
@@ -108,6 +118,8 @@
 		
 		this.physics.add.collider(player, platforms); //sets the collision between player and platform
 		this.physics.add.collider(stars, platforms); //collision check with stars and platforms
+		this.physics.add.collider(bombs, platforms); //bomb collision with ground
+		this.physics.add.collider(player, bombs, hitBomb, null, this); //calls hitBomb func if player and bomb collide
 
 		cursors = this.input.keyboard.createCursorKeys(); //populate cursor object with up, down, left, right
 
@@ -140,8 +152,35 @@
 	function collectStar(player, star) 
 	{
 		star.disableBody(true, true); //disable game object child star that has overlapped with player
+		score += 10;
+		scoreText.setText('Score: ' + score);
+
+		if (stars.countActive(true) === 0) // use this countActive group to check stars
+		{
+			stars.children.iterate(function(child) //regen stars falling from y:0
+			{
+				child.enableBody(true, child.x, 0, true, true);
+			});
+
+			//choose a random x coord for bomb placement based on player position
+			var x = (player.x < 400) ? Phaser.Math.Between(400, 800) : Phaser.Math.Between(0, 400);
+
+			var bomb = bombs.create(x, 16, 'bomb'); //create bomb
+			bomb.setBounce(1); //bounce
+			bomb.setCollideWorldBounds(true); //collide with world	
+			bomb.setVelocity(Phaser.Math.Between(-200, 200), 20); //random velocity
+
+		}
 	}
 
+	function hitBomb(player, bomb) 
+	{
+		this.physics.pause(); //pause game
+		player.setTint(0xff0000); //tint player red
+		player.anims.play('turn');
+
+		gameOver = true;
+	}
 	
 </script>
 
