--- a/SlotMachine1.html
+++ b/SlotMachine1.html
@@ -13,7 +13,7 @@
 
 <script type="text/javascript">
 
-	var config=
+	var config =
 	{
 		type: Phaser.AUTO, //set to AUTO to allow for attempted use of WebGL if browser allows
 		width: 800, //canvas sizes
@@ -22,25 +22,28 @@
 		physics: { //tell Phaser to use physics
 			default: 'arcade',
 			arcade: {
-				gravity: {y: 300}, //global gravity
+				gravity: { y: 300 }, //global gravity
 				debug: false
 			}
 		},
 
-		scene: 
+		scene:
 		{
 			preload: preload,
 			create: create,
 			update: update
+		},
+		audio: {
+			disableWebAudio: true
 		}
+
 	};
 	
 	//variables
 	var credits; //game tokens
 	var gameTokensText; //screen text
 	var tumblersSpinning = false; //to not allow lever to be pulled when spinning
-
-
+	
 
 	var number1;//maybe random numbers
 	var number2;
@@ -51,18 +54,24 @@
 
 		function preload() 
 		{
-		//load game assets here
+			//load game assets here
+			this.load.audio('background', 'assets/loop_smooth_jazz.mp3');
+
 		}
 
 		function create() 
 		{
-		//create game sprites here, set anchor points etc.
+			//create game sprites here, set anchor points etc.
+
+			var music = this.sound.add('background');
+
+			music.play();
 		}
 
 		function update() 
 		{
 		//update canvas here
-
+		
 		}
 
 </script>
