--- a/phaser_tutorial.html
+++ b/phaser_tutorial.html
@@ -174,7 +174,7 @@
 		}
 	}
 
-	function hitBomb(player, bomb) 
+	function hitBomb(player, bombs) 
 	{
 		this.physics.pause(); //pause game
 		player.setTint(0xff0000); //tint player red
