--- a/SlotMachine1.html
+++ b/SlotMachine1.html
@@ -76,7 +76,7 @@
 		var musicLoop = this.sound.add('backgroundAudio', {loop: true});
 		let loopDelay = undefined;
 
-		var star = this.add.sprite(400, 300, 'star').setInteractive;
+		var star = this.add.sprite(400, 300, 'star').setInteractive();
 
 		star.on('pointerdown',
 			function() {
