--- a/SlotMachine2/index.html
+++ b/SlotMachine2/index.html
@@ -2,7 +2,10 @@
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
+	<!-- Define the javascripts that the website can access -->
 	<script type="text/javascript" src="phaser.min.js"></script>
+	<script type="text/javascript" src="Scene1.js"></script>
+	<script type="text/javascript" src="Scene2.js"></script>
 	<script type="text/javascript" src="game.js"></script>
 </head>
 <body>
