--- a/SlotMachine3/SlotMachine3/index.html
+++ b/SlotMachine3/SlotMachine3/index.html
@@ -3,6 +3,8 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<script type="text/javascript" src="phaser.min.js"></script>
+	<script type="text/javascript" src="Scene1.js"></script>
+	<script type="text/javascript" src="Scene2.js"></script>
 	<script type="text/javascript" src="game.js"></script>
 </head>
 <body>
